--- a/package.json
+++ b/package.json
@@ -51,9 +51,15 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^1.3.1",
-    "inferno": "1.0.0-beta32",
-    "inferno-compat": "beta32",
-    "inferno-component": "^1.0.0-beta32"
+    "deepstream.io": "^2.1.2",
+    "deepstream.io-client-js": "^2.1.1",
+    "deepstream.io-tools-react": "^0.1.5",
+    "inferno": "1.0.0-beta44",
+    "inferno-compat": "beta44",
+    "inferno-component": "^1.0.0-beta44",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-mixin": "2"
   },
   "scripts": {
     "start": "node scripts/start.js",
