--- a/package.json
+++ b/package.json
@@ -3,96 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.0.0",
-    "babel-jest": "16.0.0",
-    "babel-loader": "6.2.7",
-    "babel-preset-inferno-app": "^1.0.1",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.2",
-    "css-loader": "0.25.0",
-    "detect-port": "1.0.1",
-    "dotenv": "2.0.0",
-    "eslint": "3.8.1",
-    "eslint-config-inferno-app": "^0.3.0",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-inferno": "6.6.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "filesize": "3.3.0",
-    "find-cache-dir": "*",
-    "flexboxgrid": "^6.3.1",
-    "fs-extra": "0.30.0",
-    "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.2",
-    "inferno-dev-utils": "0.3.1",
-    "jest": "16.0.2",
-    "json-loader": "0.5.4",
-    "object-assign": "4.1.0",
-    "path-exists": "2.1.0",
-    "postcss-loader": "1.0.0",
-    "promise": "7.1.1",
-    "recursive-readdir": "2.1.0",
-    "rimraf": "2.5.4",
-    "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.16.2",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
-  },
-  "dependencies": {
-    "@blueprintjs/core": "^1.3.1",
-    "deepstream.io": "^2.1.2",
+    "@blueprintjs/core": "^1.4.0",
     "deepstream.io-client-js": "^2.1.1",
     "deepstream.io-tools-react": "^0.1.5",
-    "inferno": "1.0.0-beta44",
-    "inferno-compat": "beta44",
-    "inferno-component": "^1.0.0-beta44",
+    "flexboxgrid": "^6.3.1",
     "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-mixin": "2"
+    "react-fittext": "^0.0.7",
+    "react-mixin": "^3.0.5",
+    "react-scripts": "0.8.4"
+  },
+  "dependencies": {
+    "deepstream.io": "^2.1.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "moduleFileExtensions": [
-      "jsx",
-      "js",
-      "json"
-    ],
-    "moduleNameMapper": {
-      "^.+\\.(ico|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/FileStub.js",
-      "^.+\\.css$": "<rootDir>/config/jest/CSSStub.js"
-    },
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/(build|docs|node_modules)/"
-    ],
-    "testEnvironment": "node"
-  },
-  "babel": {
-    "presets": [
-      "inferno-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "inferno-app"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
