--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@blueprintjs/core": "^1.4.0",
+    "@blueprintjs/core": "^1.6.0",
     "deepstream.io-client-js": "^2.1.1",
     "deepstream.io-tools-react": "^0.1.5",
     "flexboxgrid": "^6.3.1",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-fittext": "^0.0.7",
     "react-mixin": "^3.0.5",
-    "react-scripts": "0.8.4"
+    "react-scripts": "0.8.4",
+    "react-virtualized": "^8.9.0"
   },
   "dependencies": {
     "deepstream.io": "^2.1.2"
