--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-virtualized": "^8.9.0"
   },
   "dependencies": {
-    "deepstream.io": "^2.1.2"
+    "deepstream.io": "^2.1.2",
+    "lodash": "^4.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
