--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "deepstream.io-client-js": "^2.1.1",
     "deepstream.io-tools-react": "^0.1.5",
     "flexboxgrid": "^6.3.1",
+    "inferno": "^1.3.0-rc.3",
+    "inferno-compat": "^1.3.0-rc.3",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.2",
