--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "private": true,
   "devDependencies": {
     "@blueprintjs/core": "^1.8.0",
-    "deepstream.io-client-js": "^2.1.1",
-    "deepstream.io-tools-react": "^0.1.5",
-    "flexboxgrid": "^6.3.1",
-    "inferno": "^1.3.0-rc.3",
-    "inferno-compat": "^1.3.0-rc.3",
-    "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-addons-shallow-compare": "^15.4.2",
-    "react-dom": "^15.4.1",
-    "react-mixin": "^3.0.5",
-    "react-virtualized": "^8.9.0",
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
-    "babel-preset-react-app": "^2.1.0",
-    "babel-runtime": "^6.20.0",
+    "babel-plugin-inferno": "^1.9.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-parameters": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-latest": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
+    "deepstream.io-client-js": "^2.1.1",
+    "deepstream.io-tools-react": "^0.1.5",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
     "eslint": "3.8.1",
@@ -39,16 +40,22 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.10.0",
     "filesize": "3.3.0",
+    "flexboxgrid": "^6.3.1",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
+    "inferno": "^1.3.0-rc.3",
+    "inferno-compat": "^1.3.0-rc.3",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-shallow-compare": "^15.4.2",
     "react-dev-utils": "^0.5.0",
+    "react-virtualized": "^8.9.0",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
@@ -93,7 +100,37 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "latest"
+    ],
+    "plugins": [
+      [
+        "inferno",
+        {
+          "imports": true
+        }
+      ],
+      "transform-class-properties",
+      [
+        "transform-object-rest-spread",
+        {
+          "useBuiltIns": true
+        }
+      ],
+      [
+        "transform-runtime",
+        {
+          "helpers": false,
+          "polyfill": false,
+          "regenerator": true,
+          "moduleName": "babel-runtime/package"
+        }
+      ],
+      [
+        "transform-regenerator",
+        {
+          "async": false
+        }
+      ]
     ]
   },
   "eslintConfig": {
