--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
     "eslint": "3.8.1",
-    "eslint-config-react-app": "^0.5.1",
+    "eslint-config-inferno-app": "^0.6.1",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
     "eslint-plugin-import": "2.0.1",
@@ -47,6 +47,7 @@
     "http-proxy-middleware": "0.17.3",
     "inferno": "^1.3.0-rc.3",
     "inferno-compat": "^1.3.0-rc.3",
+    "inferno-component": "^1.3.0-rc.3",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
@@ -134,6 +135,6 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "inferno-app"
   }
 }
