--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
     "deepstream.io-client-js": "^2.1.1",
@@ -68,11 +67,13 @@
   },
   "dependencies": {
     "deepstream.io": "^2.1.2",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "superstatic": "^4.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "prod": "node server.js & superstatic build --port 5803 --host 0.0.0.0",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
