--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "chalk": "1.1.3",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
-    "deepstream.io-client-js": "^2.1.1",
     "deepstream.io-tools-react": "^0.1.5",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
@@ -67,13 +66,17 @@
   },
   "dependencies": {
     "deepstream.io": "^2.1.2",
+    "deepstream.io-client-js": "^2.1.1",
     "lodash": "^4.17.4",
+    "npm-run-all": "^4.0.1",
     "superstatic": "^4.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "prod": "node server.js & superstatic build --port 5803 --host 0.0.0.0",
+    "serve": "superstatic build --port 5803 --host 0.0.0.0",
+    "deepstream": "node server.js",
+    "prod": "npm-run-all --parallel serve deepstream",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
