--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "inferno": "^1.3.0-rc.3",
     "inferno-compat": "^1.3.0-rc.3",
     "inferno-component": "^1.3.0-rc.3",
+    "inferno-devtools": "^1.2.2",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
