--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dev-utils": "^0.5.0",
+    "react-draggable": "^2.2.3",
+    "react-portal": "^3.0.0",
     "react-virtualized": "^8.9.0",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
