--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "inferno-devtools": "^1.2.2",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
+    "node-sass": "^4.5.0",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
@@ -57,8 +58,11 @@
     "react-dev-utils": "^0.5.0",
     "react-draggable": "^2.2.3",
     "react-portal": "^3.0.0",
+    "react-resizable": "^1.6.0",
     "react-virtualized": "^8.9.0",
+    "react-vis": "^0.11.0",
     "recursive-readdir": "2.1.0",
+    "sass-loader": "^4.1.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
