--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "whatwg-fetch": "2.0.2",
+	  "connect-history-api-fallback": "latest"
   },
   "dependencies": {
     "deepstream.io": "^2.1.2",
