--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
+    "connect-history-api-fallback": "latest",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
     "deepstream.io-tools-react": "^0.1.5",
@@ -65,12 +66,12 @@
     "sass-loader": "^4.1.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
+    "three": "~0.82.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2",
-	  "connect-history-api-fallback": "latest"
+    "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
     "deepstream.io": "^2.1.2",
