--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "devDependencies": {
     "@blueprintjs/core": "^1.11.0",
-    "autoprefixer": "6.7.2",
-    "babel-core": "6.22.1",
-    "babel-eslint": "7.1.1",
-    "babel-jest": "18.0.0",
-    "babel-loader": "6.2.10",
-    "babel-plugin-inferno": "^1.9.0",
+    "autoprefixer": "~6.7.6",
+    "babel-core": "~6.23.1",
+    "babel-eslint": "~7.1.1",
+    "babel-jest": "~19.0.0",
+    "babel-loader": "~6.2.10",
+    "babel-plugin-inferno": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-es2015-parameters": "^6.23.0",
@@ -21,56 +21,52 @@
     "babel-preset-env": "^1.2.0",
     "babel-preset-latest": "^6.22.0",
     "babel-runtime": "^6.23.0",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "latest",
-    "cross-spawn": "4.0.2",
-    "css-loader": "0.26.1",
+    "case-sensitive-paths-webpack-plugin": "~1.1.4",
+    "chalk": "~1.1.3",
+    "connect-history-api-fallback": "~1.3.0",
+    "cross-spawn": "~5.1.0",
+    "css-loader": "~0.26.4",
     "deepstream.io-tools-react": "^0.1.5",
-    "detect-port": "1.0.1",
-    "dotenv": "2.0.0",
-    "eslint": "3.8.1",
-    "eslint-config-inferno-app": "^0.6.1",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.10.0",
-    "filesize": "3.3.0",
+    "detect-port": "~1.1.0",
+    "dotenv": "~4.0.0",
+    "eslint": "~3.17.1",
+    "eslint-config-inferno-app": "^1.0.0",
+    "eslint-loader": "~1.6.3",
+    "eslint-plugin-flowtype": "~2.30.3",
+    "eslint-plugin-import": "~2.2.0",
+    "eslint-plugin-jsx-a11y": "~4.0.0",
+    "eslint-plugin-inferno": "~6.10.2",
+    "extract-text-webpack-plugin": "~2.1.0",
+    "file-loader": "~0.10.1",
     "flexboxgrid": "^6.3.1",
-    "fs-extra": "0.30.0",
-    "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.3",
-    "inferno": "^1.3.0-rc.9",
-    "inferno-compat": "^1.3.0-rc.9",
-    "inferno-component": "^1.3.0-rc.9",
-    "inferno-devtools": "^1.2.2",
-    "jest": "18.1.0",
-    "json-loader": "0.5.4",
+    "fs-extra": "~2.0.0",
+    "html-webpack-plugin": "~2.28.0",
+    "http-proxy-middleware": "~0.17.4",
+    "inferno": "^1.3.1",
+    "inferno-compat": "^1.3.1",
+    "inferno-component": "^1.3.1",
+    "inferno-dev-utils": "^1.0.0",
+    "inferno-devtools": "^1.3.1",
+    "jest": "~19.0.2",
+    "json-loader": "~0.5.4",
     "node-sass": "^4.5.0",
-    "object-assign": "4.1.1",
-    "postcss-loader": "1.2.2",
-    "promise": "7.1.1",
+    "object-assign": "~4.1.1",
+    "postcss-loader": "~1.3.3",
+    "promise": "~7.1.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.2",
-    "react-dev-utils": "^0.5.1",
     "react-draggable": "^2.2.3",
     "react-portal": "^3.0.0",
     "react-resizable": "^1.6.0",
     "react-vis": "^0.11.0",
-    "recursive-readdir": "2.1.0",
     "sass-loader": "^4.1.1",
-    "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
+    "style-loader": "~0.13.2",
     "three": "~0.82.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "url-loader": "~0.5.7",
+    "webpack": "~2.2.1",
+    "webpack-dev-server": "~2.4.1",
+    "webpack-manifest-plugin": "~1.1.0",
+    "whatwg-fetch": "~2.0.2"
   },
   "dependencies": {
     "deepstream.io": "^2.1.3",
@@ -106,10 +102,7 @@
     },
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    }
+    ]
   },
   "babel": {
     "presets": [
