--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.2.0",
-    "babel-preset-latest": "^6.22.0",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "~1.1.4",
     "chalk": "~1.1.3",
     "connect-history-api-fallback": "~1.3.0",
     "cross-spawn": "~5.1.0",
     "css-loader": "~0.26.4",
+    "cssnano": "^3.10.0",
     "deepstream.io-tools-react": "^0.1.5",
     "detect-port": "~1.1.0",
     "dotenv": "~4.0.0",
@@ -34,8 +34,8 @@
     "eslint-loader": "~1.6.3",
     "eslint-plugin-flowtype": "~2.30.3",
     "eslint-plugin-import": "~2.2.0",
-    "eslint-plugin-jsx-a11y": "~4.0.0",
     "eslint-plugin-inferno": "~6.10.2",
+    "eslint-plugin-jsx-a11y": "~4.0.0",
     "extract-text-webpack-plugin": "~2.1.0",
     "file-loader": "~0.10.1",
     "flexboxgrid": "^6.3.1",
@@ -51,6 +51,7 @@
     "json-loader": "~0.5.4",
     "node-sass": "^4.5.0",
     "object-assign": "~4.1.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "~1.3.3",
     "promise": "~7.1.1",
     "react-addons-css-transition-group": "^15.4.1",
@@ -59,7 +60,7 @@
     "react-portal": "^3.0.0",
     "react-resizable": "^1.6.0",
     "react-vis": "^0.11.0",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.3",
     "style-loader": "~0.13.2",
     "three": "~0.82.1",
     "url-loader": "~0.5.7",
@@ -106,7 +107,17 @@
   },
   "babel": {
     "presets": [
-      "latest"
+      [
+        "env",
+        {
+          "targets": {
+            "ie": 11,
+            "uglify": true
+          },
+          "modules": false,
+          "useBuiltIns": false
+        }
+      ]
     ],
     "plugins": [
       [
