--- a/package.json
+++ b/package.json
@@ -74,15 +74,14 @@
     "deepstream.io": "^2.1.3",
     "deepstream.io-client-js": "^2.1.2",
     "lodash": "^4.17.4",
-    "npm-run-all": "^4.0.2",
     "superstatic": "^4.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "serve": "superstatic build --port 5803 --host 0.0.0.0",
-    "deepstream": "node server.js",
-    "prod": "npm-run-all --parallel serve deepstream",
+    "serve": "node server/static.js",
+    "deepstream": "node server/deepstream.js",
+    "prod": "node server/production.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
