--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "devDependencies": {
     "@blueprintjs/core": "^1.14.0",
+    "@types/node": "^7.0.12",
+    "@types/react-addons-css-transition-group": "^15.0.1",
     "autoprefixer": "~6.7.6",
     "babel-core": "~6.23.1",
     "babel-eslint": "~7.1.1",
@@ -56,7 +58,6 @@
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "~1.3.3",
     "promise": "~7.1.1",
-    "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.2",
     "react-draggable": "^2.2.3",
     "react-portal": "^3.0.0",
@@ -65,6 +66,9 @@
     "sass-loader": "^6.0.3",
     "style-loader": "~0.13.2",
     "three": "~0.82.1",
+    "ts-loader": "^2.0.3",
+    "tslint": "^5.1.0",
+    "typescript": "^2.2.2",
     "url-loader": "~0.5.7",
     "webpack": "~2.2.1",
     "webpack-dev-server": "~2.4.1",
