--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^7.0.12",
     "@types/react-addons-css-transition-group": "^15.0.1",
     "autoprefixer": "~6.7.6",
+    "awesome-typescript-loader": "^3.1.2",
     "babel-core": "~6.23.1",
     "babel-eslint": "~7.1.1",
     "babel-jest": "~19.0.0",
@@ -66,7 +67,6 @@
     "sass-loader": "^6.0.3",
     "style-loader": "~0.13.2",
     "three": "~0.82.1",
-    "ts-loader": "^2.0.3",
     "tslint": "^5.1.0",
     "typescript": "^2.2.2",
     "url-loader": "~0.5.7",
