Try to upgrade inferno (WIP)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
 		"jsx": "preserve",
 		"noUnusedLocals": true,
 		"strictNullChecks": false,
-		"removeComments": false
+		"removeComments": false,
+		"experimentalDecorators": true,
+		"baseUrl": ".",
+		"paths": {
+			"react": ["inferno-compat"],
+			"react-dom": ["inferno-compat"]
+		}
 	},
 	"include": [
 		"src/**/*"
