--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-loader": "~0.10.1",
     "flexboxgrid": "^6.3.1",
     "fs-extra": "~2.0.0",
+    "fuse.js": "^2.6.2",
     "html-webpack-plugin": "~2.28.0",
     "http-proxy-middleware": "~0.17.4",
     "inferno": "~1.4.2",
@@ -66,6 +67,7 @@
     "react-vis": "^0.11.0",
     "sass-loader": "^6.0.3",
     "style-loader": "~0.13.2",
+    "textarea-caret": "^3.0.2",
     "three": "~0.82.1",
     "tslint": "^5.1.0",
     "typescript": "^2.2.2",
