turns out that the imports option is horribly broken; don't use it

--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
       [
         "inferno",
         {
-          "imports": true
+          "imports": false
         }
       ],
       "transform-class-properties",
