Compile server into a single bundle file

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.2.0",
     "babel-runtime": "^6.23.0",
+    "brfs": "^1.4.3",
     "case-sensitive-paths-webpack-plugin": "~1.1.4",
     "chalk": "~1.1.3",
     "classnames": "^2.2",
@@ -55,6 +56,7 @@
     "inferno-devtools": "~1.4.2",
     "jest": "~19.0.2",
     "json-loader": "~0.5.4",
+    "node-native-loader": "^1.1.1",
     "node-sass": "^4.5.0",
     "object-assign": "~4.1.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -69,6 +71,7 @@
     "style-loader": "~0.13.2",
     "textarea-caret": "^3.0.2",
     "three": "~0.82.1",
+    "transform-loader": "^0.2.4",
     "tslint": "^5.1.0",
     "typescript": "^2.2.2",
     "url-loader": "~0.5.7",
